fixed scrollbar opacity on mobile

--- a/source/scss/blocks/scrollbar.scss
+++ b/source/scss/blocks/scrollbar.scss
@@ -35,3 +35,9 @@
   opacity: 1;
   transition: all 0.2s ease;
 }
+
+@media (max-width: 767px) {
+  .scrollbar {
+    opacity: 1;
+  }
+}
